--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "deviceinfocollector",
+  "name": "Managed Chrome Device Information Messenger",
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "tsc && babel src -d dist"
+    "build": "webpack --config webpack/webpack.prod.js"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.24.1",
-    "@babel/core": "^7.24.1",
-    "@babel/preset-env": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
     "@types/chrome": "^0.0.263",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@types/node": "^20.11.30"
+    "copy-webpack-plugin": "^9.0.1",
+    "glob": "^7.1.6",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2 ",
+    "ts-loader": "^8.0.0",
+    "typescript": "^5.0.4",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-merge": "^5.0.0"
   }
 }
