--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "moduleResolution": "node",
-    "lib": ["es6"],
-    "allowJs": true,
-    "outDir": "src",
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
-    "types": ["node", "chrome"],
-    "skipLibCheck": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.spec.ts"]
+    "compilerOptions": {
+        "strict": true,
+        "target": "es6",
+        "moduleResolution": "bundler",
+        "module": "ES6",
+        "esModuleInterop": true,
+        "sourceMap": false,
+        "rootDir": "src",
+        "outDir": "dist/js",
+        "noEmitOnError": true,
+        "jsx": "react",
+        "typeRoots": [ "node_modules/@types" ]
+    }
 }
